<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sancheztech.formulariocontactos.ConfirmacionActivity">
    <TextView
        android:id="@+id/tituloConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloConfirmar"
        android:textSize="@dimen/tamano_Titulo"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tituloConfirmar"
        android:textSize="@dimen/tamano_Info"
        android:paddingTop="@dimen/separacion_titulo"/>
    <TextView
        android:id="@+id/txtFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNombre"
        android:text="@string/msgFecha"
        android:textSize="@dimen/tamano_Info"/>
    <TextView
        android:id="@+id/txttelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFechaNacimiento"
        android:text="@string/msgTelefono"
        android:textSize="@dimen/tamano_Info"/>
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txttelefono"
        android:text="@string/msgEmail"
        android:textSize="@dimen/tamano_Info"/>

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEmail"
        android:text="@string/msgDescripcion"
        android:textSize="@dimen/tamano_Info"
        android:maxLines="3"
        android:paddingBottom="@dimen/separacion_titulo"/>

    <Button
       android:id="@+id/btnEditar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/editar"
       android:theme="@style/botonRaise"
       android:layout_below="@+id/txtDescripcion"/>
    </RelativeLayout>
