<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sancheztech.formulariocontactos.MainActivity">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txeNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tieNombre"/>
        </android.support.design.widget.TextInputLayout>
        <DatePicker
            android:id="@+id/dpFechaNacimiento"
            android:layout_height="350dp"
            android:layout_width="wrap_content"
            android:calendarViewShown="false"
            android:endYear="2016"
            android:startYear="1900"
            android:scaleX=".8"
            android:scaleY=".8"
            android:padding="-40dp"
            android:text="Fecha de nacimiento"
            android:layout_marginLeft="-50dp"
            android:layout_marginTop="-30dp"
            android:layout_marginRight="-50dp"
            android:layout_marginBottom="-30dp"
            android:textSize="12sp"
            android:layout_below="@+id/tilNombre"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dpFechaNacimiento">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txeTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tieTelefono"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilTelefono">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txeEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tieEmail"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilEmail">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txeDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tieDescripcion"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Siguiente"
            android:id="@+id/btnSiguiente"
            android:theme="@style/botonRaise"
            android:layout_below="@+id/tilDescripcion"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>
